# kisurf

./: .gitignore  CMakePresets.json  CMakePresets.json.sample  CMakeSettings.json  CONTRIBUTING.md  LICENSE.README  README.md  install-deps.sh  vcpkg-configuration.json  vcpkg.json
.gitlab/: CODEOWNERS  Fedora-Linux-CI.yml  Ubuntu-20.04-CI.yml  Windows-CI.yml  coverity.yml  linux-metadata-validate.yml
3d-viewer/3d_rendering/: 3d_placeholder_utils.h
3d-viewer/3d_viewer/: 3d_menubar.cpp
api/: CMakeLists.txt
bitmap2component/: CMakeLists.txt
cmake/: AutoCCache.cmake  CopyRuntimeDirectoryDlls.cmake  CopyRuntimeDlls.cmake  CreateGitVersionHeader.cmake  KiCadVersion.cmake  config.h.cmake
cmake/BuildSteps/: WritePlatformMetadata_linux.cmake
cmake/InstallSteps/: RefixupMacOS.cmake  SignMacOS.cmake
common/: CMakeLists.txt  app_monitor.cpp  bitmap_base.cpp  embedded_files.cpp  item_realignment.cpp  kiway.cpp  layer_id.cpp  lset.cpp  reference_image.cpp  remote_provider_models.cpp
common/api/: api_handler_common.cpp  api_plugin.cpp  api_plugin_manager.cpp  api_utils.cpp  python_manager.cpp  python_manager.h
common/dialog_about/: AboutDialog_main.cpp
common/dialogs/: panel_plugin_settings.cpp
common/font/: glyph.cpp
common/import_gfx/: svg_import_plugin.cpp
common/io/: io_utils.cpp  io_utils.h
common/jobs/: job_gerber_diff.cpp  job_gerber_diff.h  job_gerber_export_png.cpp  job_gerber_export_png.h  job_gerber_info.cpp  job_gerber_info.h
common/kisurf/ai/python/: pyproject.toml
common/kisurf/ai/python/kisurf_ai/: __init__.py  session.py  session_pb2.py  worker.py
common/preview_items/: construction_geom.cpp
common/project/: project_file.cpp
common/settings/: builtin_color_themes.h  color_settings.cpp
common/text_eval/: text_eval_parser.cpp
common/tool/: actions.cpp  editor_conditions.cpp  grid_helper.cpp  tool_manager.cpp
common/widgets/: properties_panel.h
cvpcb/: CMakeLists.txt
demos/: CMakeLists.txt
demos/pic_programmer/: fp-lib-table
docs/: ai-native-session-runtime-spec.md  deep-research-report3.md  deep-research-report4.md  deep-research-report5.md
doxygen/: doxygen.Dockerfile
eeschema/: CMakeLists.txt  bom_plugins.cpp  eeschema_config.cpp  eeschema_jobs_handler.h  eeschema_settings.cpp  eeschema_settings.h  kisurf_ai_sch_context_adapter.cpp  kisurf_ai_sch_context_adapter.h  kisurf_ai_sch_move_edit_adapter.cpp  kisurf_ai_sch_move_edit_adapter.h  kisurf_ai_sch_object_resolver.cpp  kisurf_ai_sch_object_resolver.h  kisurf_ai_sch_preview_adapter.cpp  kisurf_ai_sch_preview_adapter.h  menubar.cpp  sch_bitmap.cpp  sch_bitmap.h  sch_bus_entry.cpp  sch_bus_entry.h  sch_edit_frame.cpp  sch_edit_frame.h  sch_group.cpp  sch_group.h  sch_junction.cpp  sch_junction.h  sch_label.h  sch_line.h  sch_no_connect.cpp  sch_no_connect.h  sch_pin.cpp  sch_pin.h  sch_rtree.h  sch_screen.h  sch_sheet.cpp  sch_sheet.h  sch_sheet_pin.cpp  sch_sheet_pin.h  sch_tablecell.cpp  sch_text.cpp  sch_text.h  (+2 more)
eeschema/api/: headless_sch_context.cpp  headless_sch_context.h  sch_context.cpp  sch_context.h
eeschema/erc/: erc_settings.h
eeschema/sync_sheet_pin/: dialog_sync_sheet_pins.h  sheet_synchronization_agent.h
eeschema/tools/: sch_edit_tool.h  sch_editor_control.cpp  sch_editor_control.h
eeschema/widgets/: panel_sch_selection_filter_base.cpp  panel_sch_selection_filter_base.fbp  (+2 more)
gerbview/: CMakeLists.txt  gerber_diff.h  gerber_file_image.cpp  gerber_file_image.h  gerber_to_png.h  gerber_to_polyset.h  gerbview.cpp  gerbview_jobs_handler.cpp  gerbview_jobs_handler.h
include/: base_units.h  board_design_settings.h  board_item.h  dsnlexer.h  eda_draw_frame.h  hashtables.h  item_realignment.h  kicommon.h  kiface_ids.h  kiid.h  kiway.h  kiway_player.h  layer_ids.h  lset.h  netclass.h  pgm_base.h  project.h  reference_image.h  undo_redo_container.h
kicad/: CMakeLists.txt
pagelayout_editor/: CMakeLists.txt
pcb_calculator/: CMakeLists.txt
pcbnew/: CMakeLists.txt  board_loader.h  footprint_utils.cpp  footprint_utils.h  footprint_wizard.cpp  footprint_wizard.h  footprint_wizard_frame.cpp  footprint_wizard_frame.h  footprint_wizard_frame_functions.cpp  kisurf_ai_agent_panel_ui.h  kisurf_ai_pcb_context_adapter.cpp  kisurf_ai_pcb_context_adapter.h  kisurf_ai_pcb_move_edit_adapter.cpp  kisurf_ai_pcb_move_edit_adapter.h  kisurf_ai_pcb_object_resolver.cpp  kisurf_ai_pcb_object_resolver.h  kisurf_ai_pcb_operation_edit_adapter.cpp  kisurf_ai_pcb_operation_edit_adapter.h  kisurf_ai_pcb_preview_adapter.cpp  kisurf_ai_pcb_preview_adapter.h  kisurf_ai_pcb_session_apply_adapter.cpp  kisurf_ai_pcb_session_apply_adapter.h  kisurf_ai_pcb_session_preview_service.cpp  kisurf_ai_pcb_session_preview_service.h  kisurf_ai_pcb_session_shadow_seeder.cpp  kisurf_ai_pcb_session_shadow_seeder.h  kisurf_ai_pcb_session_validation_service.cpp  kisurf_ai_pcb_session_validation_service.h  kisurf_ai_pcb_suggestion_review.cpp  kisurf_ai_pcb_suggestion_review.h  kisurf_ai_pcb_tool_state_provider.cpp  kisurf_ai_pcb_tool_state_provider.h  menubar_pcb_editor.cpp  pad.cpp  padstack.cpp  padstack.h  pcb_dimension.cpp  pcb_edit_frame.cpp  pcb_edit_frame.h  pcb_item_containers.h  (+9 more)
pcbnew/pcb_io/sprint_layout/: CMakeLists.txt
qa/tools/common_tools/: CMakeLists.txt
qa/tools/common_tools/tools/next_action_replay/: next_action_replay.cpp
signing/: CMakeLists.txt
tools/: post_build.ps1  run_from_build.ps1
(+738 files in other folders)
