[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kisurf-ai-session-sdk"
version = "0.1.0"
description = "Python authoring SDK for KiSurf AI Native execution sessions"
requires-python = ">=3.10"

[project.scripts]
kisurf-ai-worker = "kisurf_ai.worker:main"

[tool.setuptools]
packages = ["kisurf_ai"]
